fix(kaomoji): horizontal overflow

--- a/src/styles/kaomoji.scss
+++ b/src/styles/kaomoji.scss
@@ -1,4 +1,5 @@
 .Kaomoji {
+  display: inline-block;
   padding: 4px var(--padding);
   line-height: 2;
   font-weight: 600;
